--- a/site_form/style.css
+++ b/site_form/style.css
@@ -29,6 +29,7 @@ body {
 	margin-left: 10%;
 	margin-right: 10%;
 	flex: 1; /* Для организации подвала */
+	
 }
 
 .footer{
@@ -114,4 +115,12 @@ body {
 	font-family: times new roman;
 	font-style: normal;
 	font-weight: normal;
+}
+
+.focus-block{
+	border-radius: 20px;
+	background: #fffbf6;
+	border: 1px solid #000000;
+	padding: 10px;
+	margin: 0 auto; 
 }
