--- a/site_form/Account/AccountStyle.css
+++ b/site_form/Account/AccountStyle.css
@@ -31,3 +31,36 @@
 .info-field .links-info{
 
 }
+
+/* Повторяющийся код (скопирован с другого css) */
+.form-field {
+}
+.form-field h2 {
+	text-align: center;
+	font-weight: normal;
+	margin: 0 0 32px 0;
+}
+.form-field p {
+	margin: 0 auto;	
+	margin-top: 5px;
+}
+.form-field input {
+	display:inline-block;
+	margin: 10px;
+	padding:3px;
+	border-radius:10px;
+	border: 1px solid #eee;
+	transition: .3s border-color;
+}
+.form-field input {
+	padding: 10px;
+}
+.form-field input:hover {
+	border: 1px solid #aaa;
+}	
+.form-field textarea{
+	width: 500px;
+	min-height: 200px;
+	resize: vertical;
+}
+/* Повторяющийся код (скопирован с другого css) */
