--- a/site_form/Game/GameStyle.css
+++ b/site_form/Game/GameStyle.css
@@ -1,8 +1,4 @@
 .form-field {
-	display: flex;
-	justify-content: center;
-    align-items: center;
-	height: 100%;
 }
 .form-field h2 {
 	text-align: center;
@@ -13,18 +9,22 @@
 	margin: 0 auto;	
 	margin-top: 5px;
 }
-
 .form-field input {
 	display:inline-block;
-	margin: 10px 0;
+	margin: 10px;
 	padding:3px;
 	border-radius:10px;
 	border: 1px solid #eee;
 	transition: .3s border-color;
 }
-.form-field input[type="submit"] {
+.form-field input {
 	padding: 10px;
 }
 .form-field input:hover {
 	border: 1px solid #aaa;
 }	
+.form-field textarea{
+	width: 500px;
+	min-height: 200px;
+	resize: vertical;
+}
