--- a/site_form/style.css
+++ b/site_form/style.css
@@ -123,4 +123,12 @@ body {
 	border: 1px solid #000000;
 	padding: 10px;
 	margin: 0 auto; 
+	min-width: 30%;
+}
+
+.centered-box{
+	display: flex;
+	justify-content: center;
+    align-items: center;
+	height: 100%;
 }
