--- a/site_form/Account/AccountStyle.css
+++ b/site_form/Account/AccountStyle.css
@@ -4,21 +4,20 @@
 	border: 1px solid #000000;
 	padding: 40px;
 	margin: 0 auto;
-	max-width: 60%;
-	min-width: 500px;
+	width: 500px;
 }
 .InfoBlog p{
 	padding: 0;
 	margin: 0 auto;
 }
 .InfoBlog>div{
-	padding: 0;
 	margin: 10px auto;
 }
 
 .info-field{
 	margin-bottom: 10px;
 	margin-top: 10px;
+	padding: 10px;
 	background: #FFE7D1;
 	border: 1px solid #000000;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -31,6 +30,13 @@
 .top-info .short{
 	width: 100%;
 	margin: 0 0 0 30px;
+	font-size: 16pt;
+	display: flex;
+	flex-direction: column;
+}
+.short p{
+	margin: auto; 
+	width: 100%;
 }
 .top-info .profile_logo{
 	width: 120px;
@@ -39,41 +45,41 @@
 	border-radius: 20px;
 }
 
+
 .middle-info{
 }
 
 .bottom-info{
 }
 
-/* Повторяющийся код (скопирован с другого css) */
-.form-field {
+
+.attrs {/* dl */
+	overflow: hidden;
+	margin: 0;
 }
-.form-field h2 {
-	text-align: center;
-	font-weight: normal;
-	margin: 0 0 32px 0;
+.attrs dt {
+	float: left;
+	margin: 0 10px 0 10px;
+	padding: 3px 0;
 }
-.form-field p {
-	margin: 0 auto;	
-	margin-top: 5px;
+.attrs dt:after {
+	content: ":";
 }
-.form-field input {
-	display:inline-block;
-	margin: 10px;
-	padding:3px;
-	border-radius:10px;
-	border: 1px solid #eee;
-	transition: .3s border-color;
+.attrs dd {
+	padding: 3px 0;
 }
-.form-field input {
-	padding: 10px;
+
+.about {
+	overflow: hidden;
+	margin: 0;
 }
-.form-field input:hover {
-	border: 1px solid #aaa;
-}	
-.form-field textarea{
-	width: 500px;
-	min-height: 200px;
-	resize: vertical;
+.about dt {
+	margin: 0 10px 0 10px;
+	padding: 3px 0;
 }
-/* Повторяющийся код (скопирован с другого css) */
+.about dt:after {
+	content: ":";
+}
+.about dd {
+	padding: 3px 0;
+}
