--- a/site_form/style.css
+++ b/site_form/style.css
@@ -10,13 +10,12 @@ body {
 	margin: 0;
 	background: #ffefcf;
 	font-family: times new roman;
-	/* Для организации подвала */
 	display: flex;
 	min-height: 100vh;
 	flex-direction: column;
-	/**/
 }
 
+/* Стили для шапки и подвала */
 .header{
 	background: #ffae18;
 	display: block; 
@@ -54,8 +53,6 @@ body {
 	border-radius: 20px;
 	vertical-align: middle;
 }
-
-
 
 .head-menu{
 	margin: 10px;
@@ -101,8 +98,6 @@ body {
 	background: #dd9141;
 }
 
-
-
 .footer-info{
 	padding: 5px;
 	text-align: left;	
@@ -132,3 +127,37 @@ body {
     align-items: center;
 	height: 100%;
 }
+/* Стили для шапки и подвала */
+
+/* Стили для Форм */
+.form-field {
+}
+.form-field h2 {
+	text-align: center;
+	font-weight: normal;
+	margin: 0 0 32px 0;
+}
+.form-field p {
+	margin: 0 auto;	
+	margin-top: 5px;
+}
+.form-field input {
+	display:inline-block;
+	margin: 10px;
+	padding:3px;
+	border-radius:10px;
+	border: 1px solid #eee;
+	transition: .3s border-color;
+}
+.form-field input {
+	padding: 10px;
+}
+.form-field input:hover {
+	border: 1px solid #aaa;
+}	
+.form-field textarea{
+	width: 500px;
+	min-height: 200px;
+	resize: vertical;
+}
+/* Стили для Форм */
