--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head> <!-- Этот файл шаблон -->
 	<meta charset="UTF-8">
 	<title>Соревновательная Площадка</title>
-	<link rel="stylesheet" href="style.css">
-	<link rel="icon" href="images/logo.png" sizes="32x32">
+	<link rel="stylesheet" href="{{ url_for("static", filename="css/styles.css") }}">
+	<link rel="icon" href="{{ url_for("static", filename="images/logo.png") }}" sizes="32x32">
 	{% block links %}
 	{% endblock %}
 </head>
 <body>
 	<header class="header">
 		<div class="headline">
-			<p><img src="logo.png" >Соревновательная Площадка</p>
+			<p><img src="{{ url_for("static", filename="images/logo.png") }}" >Соревновательная Площадка</p>
 		</div><!-- Лого / Название width=40pt-->
 		<nav>
 			<ul class="head-menu">
