--- a/templates/pages/profile/login.html
+++ b/templates/pages/profile/login.html
@@ -1,5 +1,5 @@
 {% block links %}
-	<link rel="stylesheet" href="AccountStyle.css">
+	<link rel="stylesheet" href="{{ url_for("static", filename="css/account.css") }}">
 {% endblock %}
 
 {% block content %}
