Сделаны кликабельные странички

--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -15,16 +15,16 @@
 		</div><!-- Лого / Название width=40pt-->
 		<nav>
 			<ul class="head-menu">
-				<li><a href="#">Главная</a></li>
-				<li><a href="#">Аккаунт</a></li>
+				<li><a href="/">Главная</a></li>
+				<li><a href="/login">Аккаунт</a></li>
 				<li><a href="#">Игра</a>
 					<ul class="submenu">
-						<li><a href="#">Играть</a></li>
-                        <li><a href="#">Создать Сессию</a></li>
-						<li><a href="#">Лидеры</a></li>
+						<li><a href="/game/connect">Играть</a></li>
+                        <li><a href="/game/create">Создать Сессию</a></li>
+						<li><a href="/game/top">Лидеры</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Справочник</a></li>
+				<li><a href="/help/guide">Справочник</a></li>
 			</ul>
 		</nav>
 		<!-- main-menu -->
