--- a/templates/pages/game/connect.html
+++ b/templates/pages/game/connect.html
@@ -1,6 +1,6 @@
 {% block content %}
 	<main class="main centered-box">
-		<form method="post" action="" class="focus-block form-field">
+		<form method="post" action="/game/editor" class="focus-block form-field">
 			<h2>Вход в игру</h2>
 			<p>
 				<label>Id Игры <input type="text" name="game_id" id="game_id" required></label>
