--- a/templates/pages/game/create.html
+++ b/templates/pages/game/create.html
@@ -1,6 +1,6 @@
 {% block content %}
 	<main class="main centered-box">
-		<form method="post" action="" class="focus-block form-field">
+		<form method="post" action="/game/editor" class="focus-block form-field">
 			<h2>Создание Сессии Игры</h2>
 			<p>
 				<label>Время начала игры: <input type="time" name="start_time" id="start_time" required></label>
