--- a/templates/pages/profile/login.html
+++ b/templates/pages/profile/login.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 	<main class="main centered-box">
-		<form method="post" action="" class="focus-block form-field">
+		<form method="post" action="/profile" class="focus-block form-field">
 			<h2>ВХОД</h2>
 			<p>
 				<label>Логин <input type="text" name="login_in" id="login_in"></label>
@@ -13,6 +13,7 @@
 				<label>Пароль <input type="password" name="password_in" id="password_in"></label>
 			</p>
 			<p><input type="submit" value="Вход"></p>
+            <a href="/register">Регистрация</a>
 		</form>
 	</main>
 {% endblock %}
