--- a/templates/pages/profile/register.html
+++ b/templates/pages/profile/register.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 	<main class="main centered-box">
-		<form method="post" action="" class="focus-block form-field">
+		<form method="post" action="/profile" class="focus-block form-field">
 			<h2>РЕГИСТРАЦИЯ</h2>
 			<p>
 				<label>Логин <input type="text" name="login" id="login" required></label>
@@ -16,6 +16,7 @@
 				<label>Повторите пароль <input type="password" name="confirmation" id="confirmation" required></label>
 			</p>
 			<p><input type="submit" value="Регистрация"></p>
+            <a href="/login">У меня уже есть аккаунт</a>
 		</form>
 	</main>
 {% endblock %}
