--- a/templates/pages/game/connect.html
+++ b/templates/pages/game/connect.html
@@ -1,3 +1,5 @@
+{% extends "pages/base.html" %}
+
 {% block content %}
 	<main class="main centered-box">
 		<form method="post" action="/game/editor" class="focus-block form-field">
