--- a/templates/pages/profile/login.html
+++ b/templates/pages/profile/login.html
@@ -1,5 +1,7 @@
+{% extends "pages/base.html" %}
+
 {% block links %}
-	<link rel="stylesheet" href="{{ url_for("static", filename="css/account.css") }}">
+	<link rel="stylesheet" href="{{ url_for("static", filename="static/css/account.css") }}">
 {% endblock %}
 
 {% block content %}
