--- a/templates/pages/profile/register.html
+++ b/templates/pages/profile/register.html
@@ -6,16 +6,16 @@
 
 {% block content %}
 	<main class="main centered-box">
-		<form method="post" action="/profile" class="focus-block form-field">
+		<form method="post" action="#" class="focus-block form-field">
 			<h2>РЕГИСТРАЦИЯ</h2>
 			<p>
-				<label>Логин <input type="text" name="login" id="login" required></label>
+				<label>Логин <input type="text" name="login" required></label>
 			</p>
 			<p>
-				<label>Пароль <input type="password" name="password" id="password" required></label>
+				<label>Пароль <input type="password" name="password" required></label>
 			</p>
 			<p>
-				<label>Повторите пароль <input type="password" name="confirmation" id="confirmation" required></label>
+				<label>Повторите пароль <input type="password" name="confirmation" required></label>
 			</p>
 			<p><input type="submit" value="Регистрация"></p>
             <a href="/login">У меня уже есть аккаунт</a>
