--- a/templates/pages/game/table.html
+++ b/templates/pages/game/table.html
@@ -2,14 +2,21 @@
 
 {% block content %}
 	<main class="main centered-box">
-		<section>
-			<section id="table-content">
-				<table border width=50%>
-					<caption>Таблица лидеров</caption>
-					<tr><td>1</td><td>2</td><td>3</td></tr>
-					<tr><td>4</td><td>5</td><td>6</td></tr>
-				</table>
-			</section>
+		<section class="table-section">
+			<table class="table">
+				<caption>Таблица лидеров</caption>
+				<tr><th>Имя</th><th>Лучший счет</th><th>Кол-во игр</th></tr>
+				<tr><td>Валера</td><td>41</td><td>300</td></tr>
+				<tr><td>Валера</td><td>22</td><td>300</td></tr>
+				<tr><td>Валера</td><td>34</td><td>300</td></tr>
+				<tr><td>Валера</td><td>42</td><td>300</td></tr>
+				<tr><td>Валера</td><td>41</td><td>300</td></tr>
+				<tr><td>Валера</td><td>22</td><td>300</td></tr>
+				<tr><td>Валера</td><td>34</td><td>300</td></tr>
+				<tr><td>Валера</td><td>42</td><td>300</td></tr>
+				<tr><td>Валера</td><td>41</td><td>300</td></tr>
+				<tr><td>Валера</td><td>22</td><td>300</td></tr>
+			</table>
 		</section>
 	</main>
 {% endblock %}
