--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -31,6 +31,7 @@
 					<!-- Когда пользователь авторизовался -->
 					<a href="/login"><img src="/templates/static/images/profile_stub.png" alt=" " class="small-profile_logo"> Аккаунт</a>
 					<ul class="submenu">
+						<li><a href="/game/connect">Редактировать</a></li>
 						<li><a href="/game/connect">Выход</a></li>
 					</ul>
 				</li>
