--- a/templates/static/css/styles.css
+++ b/templates/static/css/styles.css
@@ -20,6 +20,7 @@ body {
 	background: #ffae18;
 	display: block; 
 	border-bottom: 2px solid #000000;
+	min-width: 550px;
 }
 
 .main {
@@ -32,6 +33,7 @@ body {
 
 .footer{
 	height: 100px;
+	min-width: 550px;
 	background: #C4C4C4;
 	border-top: 2px solid #000000;
 	font-size: 10pt;
@@ -58,7 +60,7 @@ body {
 	background: #E79144;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 20px;
-	display: block;
+	display: flex;
 	list-style: none;
 }
 .head-menu a {
@@ -66,7 +68,8 @@ body {
 	color: #000000;
 	padding: 10px;
 	text-decoration: none; /* Убираем подчёркивание */
-	display: block; /* Блочная ссылка*/
+	display: inline-block; /* Блочная ссылка*/
+	white-space: nowrap;
 	text-align: center;
 	min-width:80px;
 }
@@ -75,16 +78,14 @@ body {
     background: #2c3e50;
 }
 .head-menu .left-bottom {
-    float: right;
+    margin-left: auto;
 }
+
 .small-profile_logo {
     width: 22px;
     height: 22px;
     border-radius: 10px;
     vertical-align: middle;
-}
-.small-profile_logo:after{
-    content:" "
 }
 .head-menu li{
 	margin-left: 1px;
@@ -95,6 +96,7 @@ body {
 }
 .head-menu > li .submenu{
 	display: none;
+	font-size: 12pt;
 }
 .head-menu > li:hover .submenu{
 	display: block;
