Страница редактирования профиля

--- a/templates/pages/profile/login.html
+++ b/templates/pages/profile/login.html
@@ -14,8 +14,10 @@
 			<p>
 				<label>Пароль <input type="password" name="password_in" id="password_in"></label>
 			</p>
-			<p><input type="submit" value="Вход"></p>
-            <a href="/register">Регистрация</a>
+			<div class="form-menu">
+				<input type="submit" value="Вход" class="form-btn">
+            	<a href="/register" class="form-btn">Регистрация</a>
+			</div>
 		</form>
 	</main>
 {% endblock %}
