--- a/templates/pages/profile/register.html
+++ b/templates/pages/profile/register.html
@@ -17,8 +17,10 @@
 			<p>
 				<label>Повторите пароль <input type="password" name="confirmation" id="confirmation" required></label>
 			</p>
-			<p><input type="submit" value="Регистрация"></p>
-            <a href="/login">У меня уже есть аккаунт</a>
+			<div class="form-menu">
+				<input type="submit" value="Регистрация" class="form-btn">
+				<a href="/login" class="form-btn">У меня уже есть аккаунт</a>
+			</div>
 		</form>
 	</main>
 {% endblock %}
