Добавил ограничение на ввод в 20 символов

--- a/templates/pages/game/connect.html
+++ b/templates/pages/game/connect.html
@@ -5,7 +5,7 @@
 		<form method="post" action="/game/editor" class="focus-block form-field">
 			<h2>Вход в игру</h2>
 			<p>
-				<label>Id Игры <input type="text" name="game_id" id="game_id" required></label>
+				<label>Id Игры <input type="text" name="game_id" id="game_id" required maxlength="20"></label>
 			</p>
 			<p>
 				<input type="submit" value="Присоединится">
