--- a/templates/pages/profile/login.html
+++ b/templates/pages/profile/login.html
@@ -9,10 +9,10 @@
 		<form method="post" action="/profile" class="focus-block form-field">
 			<h2>ВХОД</h2>
 			<p>
-				<label>Логин <input type="text" name="login_in" id="login_in"></label>
+				<label>Логин <input type="text" name="login_in" id="login_in" maxlength="20"></label>
 			</p>
 			<p>
-				<label>Пароль <input type="password" name="password_in" id="password_in"></label>
+				<label>Пароль <input type="password" name="password_in" id="password_in" maxlength="20"></label>
 			</p>
 			<div class="form-menu">
 				<input type="submit" value="Вход" class="form-btn">
