--- a/templates/pages/profile/profile_setting.html
+++ b/templates/pages/profile/profile_setting.html
@@ -17,7 +17,7 @@
 				</div>
 				<div>
 					<!-- TODO: добавить поле для изменения иконки профиля -->
-					<label>Иконка <input name="logo"></label>
+					<label>Иконка <input type="image" name="logo"></label>
 				</div>
 				<div class="form-menu">
 					<input type="submit" value="Изменить" class="form-btn"> <!-- TODO: Добавить возможность изменять данные профиля -->
