--- a/templates/pages/profile/register.html
+++ b/templates/pages/profile/register.html
@@ -9,13 +9,13 @@
 		<form method="post" action="/profile" class="focus-block form-field">
 			<h2>РЕГИСТРАЦИЯ</h2>
 			<p>
-				<label>Логин <input type="text" name="login" id="login" required></label>
+				<label>Логин <input type="text" name="login" id="login" required maxlength="20"></label>
 			</p>
 			<p>
-				<label>Пароль <input type="password" name="password" id="password" required></label>
+				<label>Пароль <input type="password" name="password" id="password" required maxlength="20"></label>
 			</p>
 			<p>
-				<label>Повторите пароль <input type="password" name="confirmation" id="confirmation" required></label>
+				<label>Повторите пароль <input type="password" name="confirmation" id="confirmation" required maxlength="20"></label>
 			</p>
 			<div class="form-menu">
 				<input type="submit" value="Регистрация" class="form-btn">
