Добавил стиль Сообщения об ошибки при отпраке формы

--- a/templates/pages/profile/login.html
+++ b/templates/pages/profile/login.html
@@ -18,6 +18,10 @@
 				<input type="submit" value="Вход" class="form-btn">
             	<a href="/register" class="form-btn">Регистрация</a>
 			</div>
+			<div class="lost-access">
+				<!-- Блок с выводом ошибки -->
+				<p class="text-danger">Ошиба Ввода</p><!-- TODO: Поменять название + Добавить отображение этого элемента только при ошибке -->
+			</div>
 		</form>
 	</main>
 {% endblock %}
