--- a/templates/pages/profile/register.html
+++ b/templates/pages/profile/register.html
@@ -21,6 +21,10 @@
 				<input type="submit" value="Регистрация" class="form-btn">
 				<a href="/login" class="form-btn">У меня уже есть аккаунт</a>
 			</div>
+			<div class="lost-access">
+				<!-- Блок с выводом ошибки -->
+				<p class="text-danger">Ошиба Ввода</p><!-- TODO: Поменять название + Добавить отображение этого элемента только при ошибке -->
+			</div>
 		</form>
 	</main>
 {% endblock %}
