--- a/templates/pages/profile/login.html
+++ b/templates/pages/profile/login.html
@@ -18,10 +18,12 @@
 				<input type="submit" value="Вход" class="form-btn">
             	<a href="/register" class="form-btn">Регистрация</a>
 			</div>
+
+            {% if error %}
 			<div class="lost-access">
-				<!-- Блок с выводом ошибки -->
-				<p class="text-danger">Ошиба Ввода</p><!-- TODO: Поменять название + Добавить отображение этого элемента только при ошибке -->
+				<p class="text-danger">{{ error }}</p>
 			</div>
+            {% endif %}
 		</form>
 	</main>
 {% endblock %}
