--- a/templates/pages/profile/register.html
+++ b/templates/pages/profile/register.html
@@ -9,22 +9,24 @@
 		<form method="post" action="#" class="focus-block form-field">
 			<h2>РЕГИСТРАЦИЯ</h2>
 			<p>
-				<label>Логин <input type="text" name="login" required maxlength="20"></label>
+				<label>Логин <input type="text" name="login" required minlength="4" maxlength="32"></label>
 			</p>
 			<p>
-				<label>Пароль <input type="password" name="password" required maxlength="20"></label>
+				<label>Пароль <input type="password" name="password" required minlength="6" maxlength="32"></label>
 			</p>
 			<p>
-				<label>Повторите пароль <input type="password" name="confirmation" required maxlength="20"></label>
+				<label>Повторите пароль <input type="password" name="confirmation" required minlength="6" maxlength="32"></label>
 			</p>
 			<div class="form-menu">
 				<input type="submit" value="Регистрация" class="form-btn">
 				<a href="/login" class="form-btn">У меня уже есть аккаунт</a>
 			</div>
+
+            {% if error %}
 			<div class="lost-access">
-				<!-- Блок с выводом ошибки -->
-				<p class="text-danger">Ошиба Ввода</p><!-- TODO: Поменять название + Добавить отображение этого элемента только при ошибке -->
+				<p class="text-danger">{{ error }}</p>
 			</div>
+            {% endif %}
 		</form>
 	</main>
 {% endblock %}
