В редактирование профиля добавлены поля. Добавлена стр просмота игры

--- a/site_form/style.css
+++ b/site_form/style.css
@@ -20,6 +20,7 @@ body {
 	background: #ffae18;
 	display: block; 
 	border-bottom: 2px solid #000000;
+	min-width: 550px;
 }
 
 .main {
@@ -28,11 +29,11 @@ body {
 	margin-left: 10%;
 	margin-right: 10%;
 	flex: 1; /* Для организации подвала */
-	
 }
 
 .footer{
 	height: 100px;
+	min-width: 550px;
 	background: #C4C4C4;
 	border-top: 2px solid #000000;
 	font-size: 10pt;
@@ -44,7 +45,6 @@ body {
 	margin: 10px;
 }
 .headline p {
-	
 	font-size: 200%;
 	margin: 0;
 }
@@ -56,26 +56,36 @@ body {
 
 .head-menu{
 	margin: 10px;
-	padding-left: 20px;
+	padding: 0 20px 0 20px;
 	background: #E79144;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 20px;
-	display: block;
+	display: flex;
 	list-style: none;
-	
 }
 .head-menu a {
-	color: #000000; 
+    border: 2px dashed #dc8334;
+	color: #000000;
 	padding: 10px;
 	text-decoration: none; /* Убираем подчёркивание */
-	display: block; /* Блочная ссылка*/
+	display: inline-block; /* Блочная ссылка*/
+	white-space: nowrap;
 	text-align: center;
-	min-width:80px;
+	width:120px;
+	height:23px;
 }
 .head-menu a:hover {
 	color: #FFFFFF;
     background: #2c3e50;
-	
+}
+.head-menu .left-bottom {
+    margin-left: auto;
+}
+.small-profile_logo {
+    width: 22px;
+    height: 22px;
+    border-radius: 10px;
+    vertical-align: middle;
 }
 .head-menu li{
 	margin-left: 1px;
@@ -86,6 +96,7 @@ body {
 }
 .head-menu > li .submenu{
 	display: none;
+	font-size: 12pt;
 }
 .head-menu > li:hover .submenu{
 	display: block;
@@ -97,12 +108,18 @@ body {
 	color: red;
 	background: #dd9141;
 }
+.submenu a {
+    border: 0;
+    height: 16px;
+}
 
 .footer-info{
 	padding: 5px;
-	text-align: left;	
+	text-align: left;
 }
-.footer-info ul{margin: 0;}
+.footer-info ul{
+    margin: 0;
+}
 
 .main-text{
 	font-size: 24px;
@@ -117,7 +134,7 @@ body {
 	background: #fffbf6;
 	border: 1px solid #000000;
 	padding: 10px;
-	margin: 0 auto; 
+	margin: 0 auto;
 	min-width: 30%;
 }
 
@@ -138,27 +155,59 @@ body {
 	margin: 0 0 32px 0;
 }
 .form-field p {
-	margin: 0 auto;	
+	margin: 0 auto;
 	margin-top: 5px;
 }
-.form-field input {
+.form-field input, .form-field a, .form-field select{
 	display:inline-block;
 	margin: 10px;
-	padding:3px;
+	padding: 10px;
+	min-width: 70px;
 	border-radius:10px;
 	border: 1px solid #eee;
 	transition: .3s border-color;
-}
-.form-field input {
-	padding: 10px;
+	background: #ffffff;
 }
 .form-field input:hover {
 	border: 1px solid #aaa;
-}	
+}
 .form-field textarea{
 	width: 500px;
 	min-height: 200px;
 	resize: vertical;
+}
+.form-menu {
+    width:100%;
+    display: flex;
+}
+.form-menu .form-btn {
+    background: #FFC898;
+    border-radius: 0;
+    color: #000000;
+    font-size: 14pt;
+}
+.form-menu a {
+    margin-left: auto;
+	text-decoration: none; /* Убираем подчёркивание */
+	display: inline-block;
+}
+
+.lost-access {
+    margin: 0 auto;
+    height: 40px;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.lost-access .text-danger {
+    border-top: 1px dashed red;
+    border-bottom: 1px dashed red;
+    margin: 0;
+    width: 100%;
+    font-size: 20px;
+    text-align: center;
+    color: red;
 }
 /* Стили для Форм */
 
@@ -167,7 +216,8 @@ body {
     border-radius: 20px 20px 0 0;
     background: #F1B178;
     padding: 15px;
-    width:100%;
+    min-width: 500px;
+    width: 70%;
 }
 .table {
     border: 2px solid #000000;
@@ -180,12 +230,15 @@ body {
 .table caption{
     font-size: 18pt;
     text-align: center;
+
 }
 .table tr {
     border-top: 1px solid #000000;
+    width: 100px;
 }
 .table td, th {
     padding: 10px;
+
 }
 .table th {
     border: 1px solid #000000;
