--- a/templates/pages/game/connect.html
+++ b/templates/pages/game/connect.html
@@ -7,9 +7,9 @@
 			<p>
 				<label>Id Игры <input type="text" name="game_id" id="game_id" required maxlength="20"></label>
 			</p>
-			<p>
-				<input type="submit" value="Присоединится">
-			</p> <!-- Добавить возможность перехода на страницу редактора с Id игры -->
+			<div class="form-menu centered-box">
+				<input type="submit" value="Присоединится" class="form-btn">
+			</div> <!-- Добавить возможность перехода на страницу редактора с Id игры -->
 		</form>
 	</main>
 {% endblock %}
