--- a/templates/pages/game/create.html
+++ b/templates/pages/game/create.html
@@ -11,8 +11,8 @@
 			<p>
 				<label>Длительность игры: <input type="number" name="d" id="d" min="5" max="60" step="5" value="5"> (min)</label>
 			</p>
-			<div>
-				<input type="submit" value="Отправить">
+			<div class="form-menu centered-box">
+				<input type="submit" value="Отправить" class="form-btn" >
 			</div>
 		</form>
 	</main>
