Страница Гайды обновлена

--- a/templates/pages/info/guide.html
+++ b/templates/pages/info/guide.html
@@ -1,18 +1,84 @@
 {% extends "pages/base.html" %}
 
 {% block content %}
-	<main class="main">
-		<nav class="focus-block">
+<main class="main" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+		<nav class="focus-block guide-nav">
+			<h2>Темы:</h2>
 			<ul>
 				<li><a href="#">О игре</a></li>
 				<li><a href="#">О Сайте</a></li>
-				<li><a href="#">И т.д</a></li>
+				<li><a href="#">Документация</a></li>
 			</ul>
 		</nav>
-		<section class="focus-block">
-			<p>Гайд по определенной теме</p>
-			<p>Для каждой теме своя информация</p>
-			<p>Они есть, но тут ничего нет. Не знаю зачем это сделали.</p>
+		<section class="focus-block guide-content">
+			<header>Котики</header> <!-- Название гайда -->
+			<p> <!-- Гайда -->
+				-Кошки никогда не мяукают друг с другом. Этот звук предназначен специально для людей.<br>
+				<br>
+				-Кошка за свою жизнь может иметь больше 100 котят.<br>
+				<br>
+				-Одна пара кошек и их потомки за 7 лет могут произвести 420 000 котят.<br>
+				<br>
+				-“Общительные” кошки следуют за Вами из комнаты в комнаты, чтобы контролировать Ваши действия.<br>
+				<br>
+				-У кошки потеют только подушечки лап.<br>
+				<br>
+				-Кошки могут издавать около 100 различных звуков. Для сравнения собаки только около 10.<br>
+				<br>
+				-Падающая кошка всегда действует одинаково. Сначала выравнивается голова, потом спина, потом ноги, а в конце выгибается спина, чтобы смягчить приземление.<br>
+				<br>
+				-Если кошка дерет мебель, попробуйте придать этому месту аромат лимона или апельсина. Кошки ненавидят эти запахи.<br>
+				<br>
+				-Чем больше вы говорите с кошками, тем больше они говорят с Вами.<br>
+				<br>
+				-Рисунок поверхности носа кошки уникален, как отпечаток пальца человека.<br>
+				<br>
+				-Жираф, верблюд и кошка это единственные животные-иноходцы, при ходьбе у них идут сначала левые ноги, а потом правые. Такая ходьба гарантирует скорость, проворство и тишину.<br>
+				<br>
+				-Египтяне брили брови, как признак траура, когда теряли любимую кошку.<br>
+				<br>
+				-Кошачье ухо поворачивается на 180 градусов. В каждом ухе у кошки 32 мускула, чтобы управлять ухом они используют двенадцать или более мускулов.<br>
+				<br>
+				-Средний срок жизни домашней кошки 15 лет, в то время как для диких от 3 до 5 лет.<br>
+				<br>
+				-По данным Лионского университета в мире около 400 миллионов домашних кошек. Пальму первенства отдают Австралии, где на 10 жителей приходится 9 кошек. На Азиатском континенте первое место за Индонезией, здесь более 30 миллионов пушистых зверьков, а в Европе за Францией, жители которой имеют на своем попечении 8 миллионов кошек. Вместе с тем есть страны, например Перу, Габон, где домашняя кошка почти не встречается.<br>
+				<br>
+				-Каждый год Американцы тратят четыре миллиарда долларов на пищу для кошек. Это на один миллиард долларов больше чем, они тратят на пищу для грудных детей!<br>
+				<br>
+				-Если кошка около Вас, и её хвост дрожит это самое большое чувство любви, которое она может выразить. Когда хвост начинает опускаться, значит, настроение изменилось можно отойти, она не обидится.<br>
+				<br>
+				-Кошки машут своими хвостами, когда стоят перед выбором, при этом одно желание блокирует другое. Например, если кошка стоит в дверном проеме, и хочет выйти, а на улице идёт дождь, хвост будет качаться из-за внутреннего конфликта. Кошка хочет выйти, но не хочет промокнуть. Как только она примет решение (остаться дома, или выйти под дождь), хвост немедленно прекратит раскачиваться.<br>
+				<br>
+				-Кошки трутся о человека, чтобы “перебить” чужие запахи. Запах идет из желёз, которые находятся между глазом и ухом и в основании хвоста.<br>
+				<br>
+				-Если зрачки расширены, несмотря на яркое освещение, кошка чем-то очень заинтересована или в игривом настроении.<br>
+				<br>
+				-Кошкам, чтобы видеть, достаточно 1 /6-ой света, необходимого человеку. Их ночное зрение удивительно! В темноте глаз кошки использует даже свет, отразившийся от сетчатки.<br>
+				<br>
+				-Кошки, в отличие от собак, не могут сфокусировать взгляд на близко расположенных предметах, то есть кошки дальнозорки, а собаки близоруки. Фактически лучше всего кошка видит на расстоянии от 75 см до 2-6 метров.<br>
+				<br>
+				-Чувствительность кошки к громкости звука в 3 раза выше, чем у человека! ( Если мы слушаем громкую музыку или в комнате гремит телевизор, то следует предоставить кошке возможность уйти в другое помещение!)<br>
+				<br>
+				-Кошки воспринимают звуковые частоты в диапазоне от 50 до 60 кГц. Собака реагирует на звук частотой около 40 кГц. Человек способен улавливать звуки частотой 20 кГц.<br>
+				<br>
+				-У кошки дрожит нижняя челюсть и стучат зубы, только в том случае, если добыча недостижима.<br>
+				<br>
+				-Кошки чувствуют запахи в 14 раз сильнее, чем люди!<br>
+				<br>
+				-Помимо носа, кошки могут улавливать запахи с помощью так называемой “трубки Якобсона”, расположенной на верхнем нёбе за передними резцами. Кошка пользуется им, когда полностью сосредотачивается на каком-то особенно интересном запахе, втягивая в себя воздух, слегка приподняв верхнюю губу и нос.<br>
+				<br>
+				-Уход за шерстью успокаивает, нейтрализует зарождающуюся агрессивность. Если кошка не может решить, какой путь выбрать, ей следует обдумать свое поведение. В состояние неуверенности есть универсальный рецепт: в сомнительных случаях - вылизывайся!<br>
+				<br>
+				-У кошки в среднем 12 подвижных уса с каждой стороны морды. В основании усов имеется большое количество нервных окончаний, поэтому кошка с помощью них получает информацию обо всем, что ее окружает о предметах, о ветре, о температуре и т.д. Если кошке удалить усы, она может плохо ориентироваться в пространстве, например, плохо охотиться и вообще чувствовать себя неуверенно.<br>
+				<br>
+				-Усы помогают кошке определить, пролезет ли она в отверстие!<br>
+				<br>
+				-Нервное состояние у кошки выдают уши они у нее мелко подергиваются, хотя сама кошка может спокойно сидеть и наблюдать. Можно даже, тронув кошку в таком состоянии, добиться от нее шипения и удара лапой.<br>
+				<br>
+				-При нападении кого-то кошки плотно прижимают уши к голове. Это для предохранения от зубов и когтей противника. Если кошка нападает сама, то уши она опускает горизонтально и в стороны, образуя треугольник.<br>
+				<br>
+				-Когда мы гладим кошку, у нас снижается частота сердцебиения и кровяное давление. А люди с сердечно- сосудистыми заболеваниями имеют шанс прожить дольше, если у них есть кошка, в отличие от тех, кто не имеет ни кошки, ни собаки.
+			</p>
 		</section>
 	</main>
 {% endblock %}
