Изменены значения для пола

--- a/templates/pages/profile/settings.html
+++ b/templates/pages/profile/settings.html
@@ -20,8 +20,8 @@
 					<p>
 						<label>Пол
 							<select name="gender">
-								<option value="r1">М</option>
-								<option value="r2">Ж</option>
+								<option value="0">М</option>
+								<option value="1">Ж</option>
 							</select>
 						</label>
 					</p>
