--- a/templates/pages/profile/settings.html
+++ b/templates/pages/profile/settings.html
@@ -7,35 +7,35 @@
 {% block content %}
 	<main class="main centered-box">
 		<section>
-			<form method="post" action="/profile" class="focus-block form-field">
+			<form method="post" action="#" class="focus-block form-field">
 				<h2>Именение профиля</h2>
 				<div>
 					<!-- TODO: добавить поле для изменения иконки профиля -->
-					<p><label>Иконка <input type="file" name="logo" accept="image/*,image/jpeg"></label></p>
+					<p><label>Аватар <input type="file" name="logo" accept="image/*,image/jpeg"></label></p>
 				</div>
 				<div>
-					<!-- TODO: При редактировании в поля должны вставляться старые данные (value) -->
-					<p><label>Имя <input type="text" name="FirstName" required value=""></label></p>
-					<p><label>Фамилия <input type="text" name="LastName" required value=""></label></p>
+					<p><label>Имя <input type="text" name="first_name" required value="{{ data['first_name'] }}"></label></p>
+					<p><label>Фамилия <input type="text" name="second_name" required value="{{ data['second_name'] }}"></label></p>
 					<p>
 						<label>Пол
 							<select name="gender">
-								<option value="0">М</option>
-								<option value="1">Ж</option>
+                                <option value="-1" {% if 'gender' not in data %} selected {% endif %}>Не выбран</option>
+                                {% for i in range(0, genders.__len__()) %}
+                                    <option value="{{ i }}" {% if 'gender' in data and data['gender'] == i %}selected{% endif %}>{{ genders[i] }}</option>
+                                {% endfor %}
 							</select>
 						</label>
 					</p>
-					<p><label>E-mail <input type="email" name="email" value=""></label></p>
-					<p><label>Телефон <input type="tel" name="text" pattern="[7-8][0-9]{10}" value=""></label></p>
+					<p><label>E-mail <input type="email" name="email" value="{{ data['email'] }}"></label></p>
 				</div>
 				<div>
 					<p>О себе:</p>
-					<p><textarea name="about" maxlength="512"></textarea></p>
+					<p><textarea name="about" maxlength="512">{{ data['about'] }}</textarea></p>
 				</div>
 				<br>
 				<div class="form-menu">
-					<input type="submit" value="Изменить" class="form-btn"> <!-- TODO: Добавить возможность изменять данные профиля -->
-					<a href="#" class="form-btn">Отмена</a> <!-- TODO: Добавить ссылку на профиль -->
+					<input type="submit" value="Изменить" class="form-btn">
+					<a href="/profile" class="form-btn">Отмена</a>
 				</div>
 			</form>
 		</section>
