--- a/templates/pages/profile/login.html
+++ b/templates/pages/profile/login.html
@@ -9,10 +9,10 @@
 		<form method="post" action="#" class="focus-block form-field">
 			<h2>ВХОД</h2>
 			<p>
-				<label>Логин <input type="text" name="login" maxlength="20"></label>
+				<label>Логин <input type="text" name="login" required minlength="4" maxlength="32"></label>
 			</p>
 			<p>
-				<label>Пароль <input type="password" name="password" maxlength="20"></label>
+				<label>Пароль <input type="password" name="password" required minlength="6" maxlength="32"></label>
 			</p>
 			<div class="form-menu">
 				<input type="submit" value="Вход" class="form-btn">
