шаблон для стр просмотра игры

--- a/templates/pages/game/viewing.html
+++ b/templates/pages/game/viewing.html
@@ -1,23 +1,30 @@
 {% block content %}
 <main class="main centered-box">
 	<!-- Таблица будет реализована в дальнейшем -->
-	<section class="focus-block">
-	<h2>Просмотр Игры</h2>
+	<section class="focus-block game-section">
 		<div>
-		<p>Информация о игре:</p>
+			<canvas height='400' width='600' id='game_screen' class="snake-game">#</canvas>
+			<div class="game-control">
+				<input type = "button" id="stop" value="Запуск" class="btn">
+				<input type = "button" value="Вперед/Назад" class="btn">
+			</div>
+		</div>
+		<div class="game-info">
+			<h3>Информация о игре:</h3>
 			<dl>
 				<dt>Кол-во игроков</dt>
 					<dd>6</dd>
 				<dt>Размер карты</dt>
 					<dd>32x48</dd>
 			</dl>
-		</div>
-		<div>
-			<canvas height='600' width='800'  style = "border:4px solid black; "
-			id='game_screen'>#</canvas>
-		</div>
-		<div class="centered-box">
-			<input type = "button" id="stop" value="Запуск">
+			<div>
+				<hr>
+				<h3>Список участиков</h3>
+				<ul>
+					<li>Валера 1</li>
+					<li>Валера 2</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 </main>
