--- a/site_form/style.css
+++ b/site_form/style.css
@@ -13,14 +13,14 @@ body {
 	display: flex;
 	min-height: 100vh;
 	flex-direction: column;
+	min-width: 800px;
 }
 
 /* Стили для шапки и подвала */
 .header{
 	background: #ffae18;
-	display: block; 
+	display: block;
 	border-bottom: 2px solid #000000;
-	min-width: 550px;
 }
 
 .main {
@@ -124,6 +124,8 @@ body {
 	font-family: times new roman;
 	font-style: normal;
 	font-weight: normal;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
 .focus-block{
@@ -131,7 +133,7 @@ body {
 	background: #fffbf6;
 	border: 1px solid #000000;
 	padding: 10px;
-	margin: 0 auto;
+	margin: 10px auto 10px auto;
 	min-width: 30%;
 }
 
@@ -155,7 +157,7 @@ body {
 	margin: 0 auto;
 	margin-top: 5px;
 }
-.form-field input, .form-field a, .form-field select{
+.form-field input, .form-field a, .form-field select .btn{
 	display:inline-block;
 	margin: 10px;
 	padding: 10px;
@@ -210,11 +212,12 @@ body {
 
 /* Таблица */
 .table-section {
+    margin-top: 10px;
+    margin-bottom: 10px;
     border-radius: 20px 20px 0 0;
     background: #F1B178;
     padding: 15px;
     min-width: 500px;
-    width: 70%;
 }
 .table {
     border: 2px solid #000000;
@@ -235,12 +238,89 @@ body {
 }
 .table td, th {
     padding: 10px;
-
+    min-width: 200px;
 }
 .table th {
     border: 1px solid #000000;
 }
 /* Таблица */
 
-.canvas-box{
+/* Лента гайдов */
+.guide-nav {
+    padding: 10px;
+    margin: 10px 0 0 0;
+    position: absolute;
+    left: 10px;
+    min-width: 10px;
+    width: 180px;
+    font-size: 16px;
 }
+.guide-nav h2 {
+    text-align: center;
+    margin: 0 0 10px 0;
+}
+.guide-nav a {
+    text-decoration: none;
+}
+.guide-nav ul {
+    padding-left: 25px;
+    margin: 0;
+}
+.guide-nav li {
+    margin-bottom: 5px;
+}
+.guide-content {
+    width: 60%;
+    min-width: 470px;
+    margin-left: 230px;
+    font-size: 18px;
+}
+.guide-content > header {
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.guide-content p {
+    margin-bottom: 10px;
+}
+.guide-content .listing {
+    font-style: italic;
+    font-size: 16px;
+}
+/* Лента гайдов */
+
+/* Игровое Поле */
+.game-section {
+    display: flex;
+}
+.snake-game {
+    border: 4px solid black;
+}
+.game-info {
+    width:220px;
+    padding: 10px;
+    margin-bottom: auto;
+}
+.game-info dt:after {
+	content: ":";
+}
+.game-info p, .game-info h3, .game-info dl{
+    margin: 0;
+    margin-bottom: 20px;
+}
+.game-control {
+   display: flex;
+}
+.game-control .btn {
+    margin: 0 auto;
+}
+.btn {
+	padding: 10px;
+	min-width: 70px;
+	border: 1px solid #eee;
+	background: #FFC898;
+    color: #000000;
+    font-size: 14pt;
+}
+/* Игровое Поле */
