--- a/templates/static/css/styles.css
+++ b/templates/static/css/styles.css
@@ -290,3 +290,38 @@ body {
     font-size: 16px;
 }
 /* Лента гайдов */
+
+/* Игровое Поле */ /* TODO: Добавить отдельный класс кнопки */
+.game-section {
+    display: flex;
+}
+.snake-game {
+    border: 4px solid black;
+}
+.game-info {
+    width:220px;
+    padding: 10px;
+    margin-bottom: auto;
+}
+.game-info dt:after {
+	content: ":";
+}
+.game-info p, .game-info h3, .game-info dl{
+    margin: 0;
+    margin-bottom: 20px;
+}
+.game-control {
+   display: flex;
+}
+.game-control .btn {
+    margin: 0 auto;
+}
+.btn {
+	padding: 10px;
+	min-width: 70px;
+	border: 1px solid #eee;
+	background: #FFC898;
+    color: #000000;
+    font-size: 14pt;
+}
+/* Игровое Поле */
