--- a/site_form/style.css
+++ b/site_form/style.css
@@ -294,9 +294,79 @@ body {
 .game-section {
     display: flex;
 }
-.snake-game {
-    border: 4px solid black;
+.game-screen-container{
+    padding: 0 10px;
 }
+.game-screen {
+    border: 3px solid black;
+    vertical-align:bottom;
+}
+.game-control {
+    margin: 0;
+    width: 100%;
+    background: #a0a0a0;
+}
+.control-btn {
+	background: #FFC898;
+    color: #000000;
+    outline: none;
+}
+.control-buttons {
+    padding: 0 10px 3px 10px;
+    display: flex;
+}
+.replay-setting {
+    display: inline-block;
+    margin-left: auto;
+}
+.replay-setting-menu {
+    display: none;
+}
+.replay-setting:hover .replay-setting-menu {
+    padding: 3px 3px 0 3px;
+    margin: auto;
+    display: block;
+    cursor: pointer;
+    position: absolute;
+    background: #000000;
+}
+.replay-setting-menu > * {
+    display: block;
+    margin-bottom: 3px;
+}
+.replay-reverse {}
+.replay-speed {}
+
+
+.slide-container{padding:0 5px;}
+.slider {
+    margin:0;
+    -webkit-appearance: none;
+    width: 100%;
+    height: 10px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+.slider:hover {opacity: 1;}
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 15px;
+    background: #313131;
+    cursor: pointer;
+}
+.slider::-moz-range-thumb {
+    width: 20px;
+    height: 15px;
+    background: #313131;
+    cursor: pointer;
+}
+
+
 .game-info {
     width:220px;
     padding: 10px;
@@ -308,19 +378,5 @@ body {
 .game-info p, .game-info h3, .game-info dl{
     margin: 0;
     margin-bottom: 20px;
-}
-.game-control {
-   display: flex;
-}
-.game-control .btn {
-    margin: 0 auto;
-}
-.btn {
-	padding: 10px;
-	min-width: 70px;
-	border: 1px solid #eee;
-	background: #FFC898;
-    color: #000000;
-    font-size: 14pt;
 }
 /* Игровое Поле */
