Исправил отображение цвета кнопок в редакторе кода игроков

--- a/templates/pages/game/editor.html
+++ b/templates/pages/game/editor.html
@@ -14,9 +14,9 @@
 			
 			<textarea name="game_code" cols="40" rows="20" required></textarea>
 			
-			<div class="centered-box">
-				<input type="submit" value="Отправить">
-				<input type="reset" value="Очистить">
+			<div class="centered-box form-menu">
+				<input type="submit" value="Отправить" class="form-btn">
+				<input type="reset" value="Очистить" class="form-btn">
 			</div>
 			<!-- Форма ввода "кода для игры". Нужно изменить -->
 		</form>
