Исправил перекрываемое меню в гайдах

--- a/templates/pages/info/guide.html
+++ b/templates/pages/info/guide.html
@@ -1,7 +1,7 @@
 {% extends "pages/base.html" %}
 
 {% block content %}
-<main class="main" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<main class="main centered-box" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 		<nav class="focus-block guide-nav">
 			<h2>Темы:</h2>
 			<ul>
@@ -56,29 +56,7 @@
 				-Кошкам, чтобы видеть, достаточно 1 /6-ой света, необходимого человеку. Их ночное зрение удивительно! В темноте глаз кошки использует даже свет, отразившийся от сетчатки.<br>
 				<br>
 				-Кошки, в отличие от собак, не могут сфокусировать взгляд на близко расположенных предметах, то есть кошки дальнозорки, а собаки близоруки. Фактически лучше всего кошка видит на расстоянии от 75 см до 2-6 метров.<br>
-				<br>
-				-Чувствительность кошки к громкости звука в 3 раза выше, чем у человека! ( Если мы слушаем громкую музыку или в комнате гремит телевизор, то следует предоставить кошке возможность уйти в другое помещение!)<br>
-				<br>
-				-Кошки воспринимают звуковые частоты в диапазоне от 50 до 60 кГц. Собака реагирует на звук частотой около 40 кГц. Человек способен улавливать звуки частотой 20 кГц.<br>
-				<br>
-				-У кошки дрожит нижняя челюсть и стучат зубы, только в том случае, если добыча недостижима.<br>
-				<br>
-				-Кошки чувствуют запахи в 14 раз сильнее, чем люди!<br>
-				<br>
-				-Помимо носа, кошки могут улавливать запахи с помощью так называемой “трубки Якобсона”, расположенной на верхнем нёбе за передними резцами. Кошка пользуется им, когда полностью сосредотачивается на каком-то особенно интересном запахе, втягивая в себя воздух, слегка приподняв верхнюю губу и нос.<br>
-				<br>
-				-Уход за шерстью успокаивает, нейтрализует зарождающуюся агрессивность. Если кошка не может решить, какой путь выбрать, ей следует обдумать свое поведение. В состояние неуверенности есть универсальный рецепт: в сомнительных случаях - вылизывайся!<br>
-				<br>
-				-У кошки в среднем 12 подвижных уса с каждой стороны морды. В основании усов имеется большое количество нервных окончаний, поэтому кошка с помощью них получает информацию обо всем, что ее окружает о предметах, о ветре, о температуре и т.д. Если кошке удалить усы, она может плохо ориентироваться в пространстве, например, плохо охотиться и вообще чувствовать себя неуверенно.<br>
-				<br>
-				-Усы помогают кошке определить, пролезет ли она в отверстие!<br>
-				<br>
-				-Нервное состояние у кошки выдают уши они у нее мелко подергиваются, хотя сама кошка может спокойно сидеть и наблюдать. Можно даже, тронув кошку в таком состоянии, добиться от нее шипения и удара лапой.<br>
-				<br>
-				-При нападении кого-то кошки плотно прижимают уши к голове. Это для предохранения от зубов и когтей противника. Если кошка нападает сама, то уши она опускает горизонтально и в стороны, образуя треугольник.<br>
-				<br>
-				-Когда мы гладим кошку, у нас снижается частота сердцебиения и кровяное давление. А люди с сердечно- сосудистыми заболеваниями имеют шанс прожить дольше, если у них есть кошка, в отличие от тех, кто не имеет ни кошки, ни собаки.
-			</p>
+				</p>
 		</section>
 	</main>
 {% endblock %}
