--- a/templates/static/css/styles.css
+++ b/templates/static/css/styles.css
@@ -248,12 +248,11 @@ body {
 /* Лента гайдов */
 .guide-nav {
     padding: 10px;
-    margin: 10px 0 0 0;
-    position: absolute;
-    left: 10px;
-    min-width: 10px;
+    margin: 10px;
+    min-width: 10px; /* ? */
     width: 180px;
     font-size: 16px;
+    align-self: flex-start;
 }
 .guide-nav h2 {
     text-align: center;
@@ -272,7 +271,7 @@ body {
 .guide-content {
     width: 60%;
     min-width: 470px;
-    margin-left: 230px;
+    margin-left: 10px;
     font-size: 18px;
 }
 .guide-content > header {
