--- a/templates/pages/profile/settings.html
+++ b/templates/pages/profile/settings.html
@@ -38,6 +38,18 @@
 					<a href="/profile" class="form-btn">Отмена</a>
 				</div>
 			</form>
+
+			<form method="post" action="#" class="focus-block form-field">
+				<h2>Смена пароля</h2>
+
+				<p><label>Пароль <input type="password" name="password" minlength="6" maxlength="32"></label></p>
+				<p><label>Повторите пароль <input type="password" name="confirmation" minlength="6" maxlength="32"></label></p>
+
+				<div class="form-menu centered-box">
+					<input type="submit" value="Изменить" class="form-btn">
+				</div>
+			</form>
+
 		</section>
 	</main>
 {% endblock %}
