--- a/templates/pages/game/viewing.html
+++ b/templates/pages/game/viewing.html
@@ -43,5 +43,5 @@
 	</section>
 </main>
 
-<script src="scripts.js"></script>
+<script src="{{ url_for("static", filename="static/scripts.js") }}"></script>
 {% endblock %}
