--- a/templates/pages/profile/register.html
+++ b/templates/pages/profile/register.html
@@ -9,7 +9,7 @@
 		<form method="post" action="#" class="focus-block form-field">
 			<h2>РЕГИСТРАЦИЯ</h2>
 			<p>
-				<label>Логин <input type="text" name="login" required minlength="4" maxlength="32"></label>
+				<label>Логин <input type="text" name="login" required minlength="4" maxlength="32" value="{{ data['login'] }}"></label>
 			</p>
 			<p>
 				<label>Пароль <input type="password" name="password" required minlength="6" maxlength="32"></label>
